--- a/package.json
+++ b/package.json
@@ -18,10 +18,17 @@
 		"build": "vite build && tsc"
 	},
 	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^5.57.1",
+		"@typescript-eslint/parser": "^5.57.1",
+		"eslint": "^8.37.0",
+		"eslint-config-prettier": "^8.8.0",
+		"eslint-plugin-html": "^7.1.0",
+		"eslint-plugin-prettier": "^4.2.1",
+		"prettier": "^2.8.7",
 		"typescript": "^5.0.3",
 		"vite": "^4.2.1"
 	},
 	"publishConfig": {
-    "access": "public"
+		"access": "public"
 	}
 }
