--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 	],
 	"scripts": {
 		"dev": "vite",
-		"build": "vite build && tsc"
+		"build": "vite build && tsc",
+    "prepublishOnly": "npm run build"
 	},
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^5.57.1",
